# discourse-ai-bot

./: .gitignore  README.md  pyproject.toml  sitecustomize.py
discourse_ai_bot/: __init__.py
prompts/: SYSTEM_PROMPT.md
src/discourse_ai_bot/: __init__.py  __main__.py  classifier.py  cli.py  context.py  discourse.py  gifs.py  http.py  models.py  ollama.py  presence.py  roblox_docs.py  service.py  settings.py  storage.py  utils.py
tests/: test_classifier_and_storage.py  test_cli.py  test_context.py  test_discourse_client.py  test_http.py  test_ollama.py  test_presence.py  test_roblox_docs.py  test_service.py  test_settings.py  test_storage.py
